--- a/dummy-site/package.json
+++ b/dummy-site/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.28.0",
+    "lenis": "^1.3.13",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
     "react": "19.1.0",
