--- a/dummy-site/package.json
+++ b/dummy-site/package.json
@@ -16,11 +16,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.28.0",
+    "leaflet": "^1.9.4",
     "lenis": "^1.3.13",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
