--- a/dummy-site/package.json
+++ b/dummy-site/package.json
@@ -20,7 +20,7 @@
     "leaflet": "^1.9.4",
     "lenis": "^1.3.13",
     "lucide-react": "^0.545.0",
-    "next": "15.5.5",
+    "next": "^15.5.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
